--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -5,7 +5,7 @@
  font-family:'Times New Roman', Times, serif;
 }
 
-body{
+.login-container{
     display:flex;
     justify-content:center;
     align-items:center;
@@ -69,7 +69,7 @@ body{
     margin-right:3px;
 }
 .remember-forgot a {
-    color: #fff;
+    color: #000000;
     text-decoration: none;
 }
 .remember-forgot a:hover{
